added /version command

--- a/notebooks/pyslurm_data.ipynb
+++ b/notebooks/pyslurm_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,8 +10,27 @@
     "import pyslurm\n",
     "from IPython.display import display\n",
     "import json\n",
-    "from datetime import datetime\n",
-    "import math"
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'21.8.1'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pyslurm.version()"
    ]
   },
   {
@@ -263,9 +282,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (1, 33)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>parts_packed</th><th>req_time</th><th>req_time_start</th><th>server_thread_count</th><th>agent_queue_size</th><th>schedule_cycle_max</th><th>schedule_cycle_last</th><th>schedule_cycle_sum</th><th>schedule_cycle_counter</th><th>schedule_cycle_depth</th><th>schedule_queue_len</th><th>jobs_submitted</th><th>jobs_started</th><th>jobs_completed</th><th>jobs_canceled</th><th>jobs_failed</th><th>jobs_pending</th><th>jobs_running</th><th>job_states_ts</th><th>bf_backfilled_jobs</th><th>bf_last_backfilled_jobs</th><th>bf_cycle_counter</th><th>bf_cycle_sum</th><th>bf_cycle_last</th><th>bf_cycle_max</th><th>bf_last_depth</th><th>bf_last_depth_try</th><th>bf_depth_sum</th><th>bf_depth_try_sum</th><th>bf_queue_len</th><th>bf_queue_len_sum</th><th>bf_when_last_cycle</th><th>bf_active</th></tr><tr><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td></tr></thead><tbody><tr><td>1</td><td>1743786761</td><td>1743724800</td><td>3</td><td>0</td><td>96372</td><td>631</td><td>115144699</td><td>28885</td><td>2206155</td><td>78</td><td>22007</td><td>22298</td><td>22356</td><td>0</td><td>0</td><td>77</td><td>54</td><td>1743786745</td><td>1550</td><td>0</td><td>516</td><td>4745896</td><td>9631</td><td>18117</td><td>75</td><td>38</td><td>39735</td><td>19872</td><td>75</td><td>39487</td><td>1743786657</td><td>0</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (1, 33)\n",
+       "┌───────────┬───────────┬───────────┬───────────┬───┬───────────┬───────────┬───────────┬──────────┐\n",
+       "│ parts_pac ┆ req_time  ┆ req_time_ ┆ server_th ┆ … ┆ bf_queue_ ┆ bf_queue_ ┆ bf_when_l ┆ bf_activ │\n",
+       "│ ked       ┆ ---       ┆ start     ┆ read_coun ┆   ┆ len       ┆ len_sum   ┆ ast_cycle ┆ e        │\n",
+       "│ ---       ┆ i64       ┆ ---       ┆ t         ┆   ┆ ---       ┆ ---       ┆ ---       ┆ ---      │\n",
+       "│ i64       ┆           ┆ i64       ┆ ---       ┆   ┆ i64       ┆ i64       ┆ i64       ┆ i64      │\n",
+       "│           ┆           ┆           ┆ i64       ┆   ┆           ┆           ┆           ┆          │\n",
+       "╞═══════════╪═══════════╪═══════════╪═══════════╪═══╪═══════════╪═══════════╪═══════════╪══════════╡\n",
+       "│ 1         ┆ 174378676 ┆ 174372480 ┆ 3         ┆ … ┆ 75        ┆ 39487     ┆ 174378665 ┆ 0        │\n",
+       "│           ┆ 1         ┆ 0         ┆           ┆   ┆           ┆           ┆ 7         ┆          │\n",
+       "└───────────┴───────────┴───────────┴───────────┴───┴───────────┴───────────┴───────────┴──────────┘"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (10, 5)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>id</th><th>count</th><th>ave_time</th><th>total_time</th><th>type</th></tr><tr><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>str</td></tr></thead><tbody><tr><td>1002</td><td>11938</td><td>1075</td><td>12844369</td><td>&quot;MESSAGE_NODE_REGISTRATION_STAT…</td></tr><tr><td>2003</td><td>641</td><td>2772</td><td>1776890</td><td>&quot;REQUEST_JOB_INFO&quot;</td></tr><tr><td>2009</td><td>1609</td><td>499</td><td>804154</td><td>&quot;REQUEST_PARTITION_INFO&quot;</td></tr><tr><td>2007</td><td>268</td><td>1557</td><td>417405</td><td>&quot;REQUEST_NODE_INFO&quot;</td></tr><tr><td>5005</td><td>248</td><td>3237</td><td>802898</td><td>&quot;REQUEST_CANCEL_JOB_STEP&quot;</td></tr><tr><td>5016</td><td>189129</td><td>719</td><td>136083288</td><td>&quot;REQUEST_STEP_COMPLETE&quot;</td></tr><tr><td>5017</td><td>27</td><td>1248</td><td>33699</td><td>&quot;REQUEST_COMPLETE_JOB_ALLOCATIO…</td></tr><tr><td>6012</td><td>99723</td><td>214</td><td>21421049</td><td>&quot;MESSAGE_EPILOG_COMPLETE&quot;</td></tr><tr><td>5032</td><td>1002</td><td>4521</td><td>4530910</td><td>&quot;REQUEST_KILL_JOB&quot;</td></tr><tr><td>5018</td><td>99712</td><td>1159</td><td>115620336</td><td>&quot;REQUEST_COMPLETE_BATCH_SCRIPT&quot;</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (10, 5)\n",
+       "┌──────┬────────┬──────────┬────────────┬─────────────────────────────────┐\n",
+       "│ id   ┆ count  ┆ ave_time ┆ total_time ┆ type                            │\n",
+       "│ ---  ┆ ---    ┆ ---      ┆ ---        ┆ ---                             │\n",
+       "│ i64  ┆ i64    ┆ i64      ┆ i64        ┆ str                             │\n",
+       "╞══════╪════════╪══════════╪════════════╪═════════════════════════════════╡\n",
+       "│ 1002 ┆ 11938  ┆ 1075     ┆ 12844369   ┆ MESSAGE_NODE_REGISTRATION_STAT… │\n",
+       "│ 2003 ┆ 641    ┆ 2772     ┆ 1776890    ┆ REQUEST_JOB_INFO                │\n",
+       "│ 2009 ┆ 1609   ┆ 499      ┆ 804154     ┆ REQUEST_PARTITION_INFO          │\n",
+       "│ 2007 ┆ 268    ┆ 1557     ┆ 417405     ┆ REQUEST_NODE_INFO               │\n",
+       "│ 5005 ┆ 248    ┆ 3237     ┆ 802898     ┆ REQUEST_CANCEL_JOB_STEP         │\n",
+       "│ 5016 ┆ 189129 ┆ 719      ┆ 136083288  ┆ REQUEST_STEP_COMPLETE           │\n",
+       "│ 5017 ┆ 27     ┆ 1248     ┆ 33699      ┆ REQUEST_COMPLETE_JOB_ALLOCATIO… │\n",
+       "│ 6012 ┆ 99723  ┆ 214      ┆ 21421049   ┆ MESSAGE_EPILOG_COMPLETE         │\n",
+       "│ 5032 ┆ 1002   ┆ 4521     ┆ 4530910    ┆ REQUEST_KILL_JOB                │\n",
+       "│ 5018 ┆ 99712  ┆ 1159     ┆ 115620336  ┆ REQUEST_COMPLETE_BATCH_SCRIPT   │\n",
+       "└──────┴────────┴──────────┴────────────┴─────────────────────────────────┘"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (11, 6)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>id</th><th>count</th><th>ave_time</th><th>total_time</th><th>user</th><th>total_time_str</th></tr><tr><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>str</td><td>str</td></tr></thead><tbody><tr><td>0</td><td>500336</td><td>826</td><td>413347414</td><td>&quot;root&quot;</td><td>&quot;41.3347414 seconds&quot;</td></tr><tr><td>1002</td><td>212</td><td>1169</td><td>248024</td><td>&quot;ubuntu&quot;</td><td>&quot;0.0248024 seconds&quot;</td></tr><tr><td>14004</td><td>267045</td><td>2184</td><td>583287255</td><td>&quot;andrewsg&quot;</td><td>&quot;58.3287255 seconds&quot;</td></tr><tr><td>11034</td><td>3030</td><td>3522</td><td>10672930</td><td>&quot;sheddn&quot;</td><td>&quot;1.067293 seconds&quot;</td></tr><tr><td>13003</td><td>740</td><td>1389</td><td>1028389</td><td>&quot;elhajjajys&quot;</td><td>&quot;0.1028389 seconds&quot;</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>1514701016</td><td>2287</td><td>2036</td><td>4657296</td><td>&quot;dugase&quot;</td><td>&quot;0.4657296 seconds&quot;</td></tr><tr><td>11001</td><td>68</td><td>2228</td><td>151567</td><td>&quot;yutianx&quot;</td><td>&quot;0.0151567 seconds&quot;</td></tr><tr><td>1000</td><td>8</td><td>1072</td><td>8582</td><td>&quot;mjp&quot;</td><td>&quot;0.0008582 seconds&quot;</td></tr><tr><td>1514701022</td><td>504</td><td>1528</td><td>770420</td><td>&quot;kresgeb&quot;</td><td>&quot;0.077042 seconds&quot;</td></tr><tr><td>1514701009</td><td>711</td><td>1487</td><td>1057549</td><td>&quot;ramirezc&quot;</td><td>&quot;0.1057549 seconds&quot;</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (11, 6)\n",
+       "┌────────────┬────────┬──────────┬────────────┬────────────┬────────────────────┐\n",
+       "│ id         ┆ count  ┆ ave_time ┆ total_time ┆ user       ┆ total_time_str     │\n",
+       "│ ---        ┆ ---    ┆ ---      ┆ ---        ┆ ---        ┆ ---                │\n",
+       "│ i64        ┆ i64    ┆ i64      ┆ i64        ┆ str        ┆ str                │\n",
+       "╞════════════╪════════╪══════════╪════════════╪════════════╪════════════════════╡\n",
+       "│ 0          ┆ 500336 ┆ 826      ┆ 413347414  ┆ root       ┆ 41.3347414 seconds │\n",
+       "│ 1002       ┆ 212    ┆ 1169     ┆ 248024     ┆ ubuntu     ┆ 0.0248024 seconds  │\n",
+       "│ 14004      ┆ 267045 ┆ 2184     ┆ 583287255  ┆ andrewsg   ┆ 58.3287255 seconds │\n",
+       "│ 11034      ┆ 3030   ┆ 3522     ┆ 10672930   ┆ sheddn     ┆ 1.067293 seconds   │\n",
+       "│ 13003      ┆ 740    ┆ 1389     ┆ 1028389    ┆ elhajjajys ┆ 0.1028389 seconds  │\n",
+       "│ …          ┆ …      ┆ …        ┆ …          ┆ …          ┆ …                  │\n",
+       "│ 1514701016 ┆ 2287   ┆ 2036     ┆ 4657296    ┆ dugase     ┆ 0.4657296 seconds  │\n",
+       "│ 11001      ┆ 68     ┆ 2228     ┆ 151567     ┆ yutianx    ┆ 0.0151567 seconds  │\n",
+       "│ 1000       ┆ 8      ┆ 1072     ┆ 8582       ┆ mjp        ┆ 0.0008582 seconds  │\n",
+       "│ 1514701022 ┆ 504    ┆ 1528     ┆ 770420     ┆ kresgeb    ┆ 0.077042 seconds   │\n",
+       "│ 1514701009 ┆ 711    ┆ 1487     ┆ 1057549    ┆ ramirezc   ┆ 0.1057549 seconds  │\n",
+       "└────────────┴────────┴──────────┴────────────┴────────────┴────────────────────┘"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "jobs_json_string = json.dumps(pyslurm.statistics().get())\n",
     "jobs_json = json.loads(jobs_json_string)\n",
