fixed bug with gres column

--- a/notebooks/pyslurm_data.ipynb
+++ b/notebooks/pyslurm_data.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (5, 12)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>partitions</th><th>name</th><th>state</th><th>alloc_cpus</th><th>cpus</th><th>gres_used</th><th>gres</th><th>free_mem</th><th>real_memory</th><th>gres_usage</th><th>cpus_usage</th><th>mem_usage</th></tr><tr><td>str</td><td>list[str]</td><td>list[str]</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>f64</td><td>str</td><td>str</td><td>str</td><td>str</td></tr></thead><tbody><tr><td>&quot;30mins&quot;</td><td>[&quot;z1014&quot;, &quot;z1016&quot;, … &quot;z1050&quot;]</td><td>[&quot;IDLE&quot;, &quot;IDLE&quot;, … &quot;MIXED&quot;]</td><td>936</td><td>2408</td><td>0</td><td>0</td><td>4476.0</td><td>&quot;11812.0 GB&quot;</td><td>&quot;&quot;</td><td>&quot;38.87%&quot;</td><td>&quot;62.11%&quot;</td></tr><tr><td>&quot;4hours&quot;</td><td>[&quot;z1014&quot;, &quot;z1016&quot;, … &quot;z1040&quot;]</td><td>[&quot;IDLE&quot;, &quot;IDLE&quot;, … &quot;IDLE&quot;]</td><td>0</td><td>1040</td><td>0</td><td>0</td><td>4064.0</td><td>&quot;5026.0 GB&quot;</td><td>&quot;&quot;</td><td>&quot;0.0%&quot;</td><td>&quot;19.14%&quot;</td></tr><tr><td>&quot;12hours&quot;</td><td>[&quot;z1021&quot;, &quot;z1022&quot;, … &quot;z1053&quot;]</td><td>[&quot;MIXED&quot;, &quot;MIXED&quot;, … &quot;MIXED&quot;]</td><td>1080</td><td>1560</td><td>0</td><td>0</td><td>527.0</td><td>&quot;7539.0 GB&quot;</td><td>&quot;&quot;</td><td>&quot;69.23%&quot;</td><td>&quot;93.01%&quot;</td></tr><tr><td>&quot;5days&quot;</td><td>[&quot;z1014&quot;, &quot;z1016&quot;, … &quot;z1053&quot;]</td><td>[&quot;IDLE&quot;, &quot;IDLE&quot;, … &quot;MIXED&quot;]</td><td>576</td><td>1296</td><td>0</td><td>0</td><td>2973.0</td><td>&quot;6030.0 GB&quot;</td><td>&quot;&quot;</td><td>&quot;44.44%&quot;</td><td>&quot;50.7%&quot;</td></tr><tr><td>&quot;gpu&quot;</td><td>[&quot;z018&quot;, &quot;z019&quot;]</td><td>[&quot;IDLE&quot;, &quot;IDLE&quot;]</td><td>0</td><td>64</td><td>0</td><td>8</td><td>416.0</td><td>&quot;752.0 GB&quot;</td><td>&quot;0.0%&quot;</td><td>&quot;0.0%&quot;</td><td>&quot;44.68%&quot;</td></tr></tbody></table></div>"
+       "<small>shape: (5, 12)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>partitions</th><th>name</th><th>state</th><th>alloc_cpus</th><th>cpus</th><th>gres_used</th><th>gres</th><th>free_mem</th><th>real_memory</th><th>gres_usage</th><th>cpus_usage</th><th>mem_usage</th></tr><tr><td>str</td><td>list[str]</td><td>list[str]</td><td>i64</td><td>i64</td><td>i64</td><td>str</td><td>f64</td><td>str</td><td>str</td><td>str</td><td>str</td></tr></thead><tbody><tr><td>&quot;30mins&quot;</td><td>[&quot;z1014&quot;, &quot;z1016&quot;, … &quot;z1050&quot;]</td><td>[&quot;MIXED&quot;, &quot;IDLE&quot;, … &quot;MIXED&quot;]</td><td>1000</td><td>2408</td><td>0</td><td>&quot;&quot;</td><td>4590.0</td><td>&quot;11812.0 GB&quot;</td><td>&quot;&quot;</td><td>&quot;41.53%&quot;</td><td>&quot;61.14%&quot;</td></tr><tr><td>&quot;4hours&quot;</td><td>[&quot;z1014&quot;, &quot;z1016&quot;, … &quot;z1040&quot;]</td><td>[&quot;MIXED&quot;, &quot;IDLE&quot;, … &quot;IDLE&quot;]</td><td>64</td><td>1040</td><td>0</td><td>&quot;&quot;</td><td>4160.0</td><td>&quot;5026.0 GB&quot;</td><td>&quot;&quot;</td><td>&quot;6.15%&quot;</td><td>&quot;17.23%&quot;</td></tr><tr><td>&quot;12hours&quot;</td><td>[&quot;z1021&quot;, &quot;z1022&quot;, … &quot;z1053&quot;]</td><td>[&quot;MIXED&quot;, &quot;MIXED&quot;, … &quot;MIXED&quot;]</td><td>1080</td><td>1560</td><td>0</td><td>&quot;&quot;</td><td>545.0</td><td>&quot;7539.0 GB&quot;</td><td>&quot;&quot;</td><td>&quot;69.23%&quot;</td><td>&quot;92.77%&quot;</td></tr><tr><td>&quot;5days&quot;</td><td>[&quot;z1014&quot;, &quot;z1016&quot;, … &quot;z1053&quot;]</td><td>[&quot;MIXED&quot;, &quot;IDLE&quot;, … &quot;MIXED&quot;]</td><td>640</td><td>1296</td><td>0</td><td>&quot;&quot;</td><td>2941.0</td><td>&quot;6030.0 GB&quot;</td><td>&quot;&quot;</td><td>&quot;49.38%&quot;</td><td>&quot;51.23%&quot;</td></tr><tr><td>&quot;gpu&quot;</td><td>[&quot;z018&quot;, &quot;z019&quot;]</td><td>[&quot;MIXED&quot;, &quot;MIXED&quot;]</td><td>16</td><td>64</td><td>8</td><td>&quot;8&quot;</td><td>346.0</td><td>&quot;752.0 GB&quot;</td><td>&quot;100.0%&quot;</td><td>&quot;25.0%&quot;</td><td>&quot;53.99%&quot;</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (5, 12)\n",
@@ -70,24 +70,24 @@
        "│ ---       ┆ list[str] ┆ list[str] ┆ ---       ┆   ┆ ---       ┆ ---       ┆ ---       ┆ ---      │\n",
        "│ str       ┆           ┆           ┆ i64       ┆   ┆ str       ┆ str       ┆ str       ┆ str      │\n",
        "╞═══════════╪═══════════╪═══════════╪═══════════╪═══╪═══════════╪═══════════╪═══════════╪══════════╡\n",
-       "│ 30mins    ┆ [\"z1014\", ┆ [\"IDLE\",  ┆ 936       ┆ … ┆ 11812.0   ┆           ┆ 38.87%    ┆ 62.11%   │\n",
+       "│ 30mins    ┆ [\"z1014\", ┆ [\"MIXED\", ┆ 1000      ┆ … ┆ 11812.0   ┆           ┆ 41.53%    ┆ 61.14%   │\n",
        "│           ┆ \"z1016\",  ┆ \"IDLE\", … ┆           ┆   ┆ GB        ┆           ┆           ┆          │\n",
        "│           ┆ …         ┆ \"MIXED\"]  ┆           ┆   ┆           ┆           ┆           ┆          │\n",
        "│           ┆ \"z1050\"]  ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
-       "│ 4hours    ┆ [\"z1014\", ┆ [\"IDLE\",  ┆ 0         ┆ … ┆ 5026.0 GB ┆           ┆ 0.0%      ┆ 19.14%   │\n",
+       "│ 4hours    ┆ [\"z1014\", ┆ [\"MIXED\", ┆ 64        ┆ … ┆ 5026.0 GB ┆           ┆ 6.15%     ┆ 17.23%   │\n",
        "│           ┆ \"z1016\",  ┆ \"IDLE\", … ┆           ┆   ┆           ┆           ┆           ┆          │\n",
        "│           ┆ …         ┆ \"IDLE\"]   ┆           ┆   ┆           ┆           ┆           ┆          │\n",
        "│           ┆ \"z1040\"]  ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
-       "│ 12hours   ┆ [\"z1021\", ┆ [\"MIXED\", ┆ 1080      ┆ … ┆ 7539.0 GB ┆           ┆ 69.23%    ┆ 93.01%   │\n",
+       "│ 12hours   ┆ [\"z1021\", ┆ [\"MIXED\", ┆ 1080      ┆ … ┆ 7539.0 GB ┆           ┆ 69.23%    ┆ 92.77%   │\n",
        "│           ┆ \"z1022\",  ┆ \"MIXED\",  ┆           ┆   ┆           ┆           ┆           ┆          │\n",
        "│           ┆ …         ┆ …         ┆           ┆   ┆           ┆           ┆           ┆          │\n",
        "│           ┆ \"z1053\"]  ┆ \"MIXED\"]  ┆           ┆   ┆           ┆           ┆           ┆          │\n",
-       "│ 5days     ┆ [\"z1014\", ┆ [\"IDLE\",  ┆ 576       ┆ … ┆ 6030.0 GB ┆           ┆ 44.44%    ┆ 50.7%    │\n",
+       "│ 5days     ┆ [\"z1014\", ┆ [\"MIXED\", ┆ 640       ┆ … ┆ 6030.0 GB ┆           ┆ 49.38%    ┆ 51.23%   │\n",
        "│           ┆ \"z1016\",  ┆ \"IDLE\", … ┆           ┆   ┆           ┆           ┆           ┆          │\n",
        "│           ┆ …         ┆ \"MIXED\"]  ┆           ┆   ┆           ┆           ┆           ┆          │\n",
        "│           ┆ \"z1053\"]  ┆           ┆           ┆   ┆           ┆           ┆           ┆          │\n",
-       "│ gpu       ┆ [\"z018\",  ┆ [\"IDLE\",  ┆ 0         ┆ … ┆ 752.0 GB  ┆ 0.0%      ┆ 0.0%      ┆ 44.68%   │\n",
-       "│           ┆ \"z019\"]   ┆ \"IDLE\"]   ┆           ┆   ┆           ┆           ┆           ┆          │\n",
+       "│ gpu       ┆ [\"z018\",  ┆ [\"MIXED\", ┆ 16        ┆ … ┆ 752.0 GB  ┆ 100.0%    ┆ 25.0%     ┆ 53.99%   │\n",
+       "│           ┆ \"z019\"]   ┆ \"MIXED\"]  ┆           ┆   ┆           ┆           ┆           ┆          │\n",
        "└───────────┴───────────┴───────────┴───────────┴───┴───────────┴───────────┴───────────┴──────────┘"
       ]
      },
@@ -149,6 +149,7 @@
     "    ])\n",
     ")\n",
     "node_df = node_df.with_columns(pl.col(\"gres_usage\").replace(\"NaN%\", \"\"))\n",
+    "node_df = node_df.with_columns(pl.col(\"gres\").cast(pl.Utf8).replace(\"0\", \"\"))\n",
     "custom_order = [\"30mins\", \"4hours\", \"12hours\", \"5days\", \"gpu\"]\n",
     "order_dict = {val: i for i, val in enumerate(custom_order)}\n",
     "node_df = (node_df\n",
